--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/jaysalvat/eslint-config--vue/issues"
   },
   "homepage": "https://github.com/jaysalvat/eslint-config--vue#readme",
-  "devDependencies": {
+  "dependencies": {
     "@jaysalvat/eslint-config": "^1.0.2",
     "eslint-plugin-vue": "^7.5.0"
   }
